<resources>
    <string name="app_name">Winshift</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="demo_splash">SplashTest</string>
    <string name="designer_splash">Designed by BBH</string>
    <string name="designer_splash2">08038655003</string>
    <string name="image_change_hint">Tap image to change (Optional)</string>
    <string name="main_welcome_text">Hey!</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="my_number_hint">My Mobile</string>
    <string name="front_button">Save</string>
    <string name="select_current_shift_hint"><u>My Shift For Today</u></string>
    <string-array name="shift_names">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
        <item>Off</item>
    </string-array>

    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="confirm_dialog_title">Items to be added</string>
    <string name="font_roboto">Roboto</string>
    <string name="my_intercom_hint">My Intercom</string>
    <string name="department">My Department</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">&#8230;just search name</string>
    <string name="search_label_hint">Hi, You can predict your colleague\'s shift&#8230;</string>
    <string name="get_colleagues_date">choose date</string>
    <string name="my_shift_label_hint">Predict My Shift</string>
    <string name="or_add_hint">&#8230;or you can just &#8230;</string>
    <string name="add_colleague">add someone</string>
    <string name="title_activity_add_someone">AddSomeone</string>
    <string name="full_name_hint">Name</string>
    <string name="add_someone_department">Department</string>
    <string name="add_someone_intercom">Intercom</string>
    <string name="add_someone_number_hint">Mobile</string>
    <string name="add_someone_shift_hint">Current Shift</string>
    <string name="optional_hint">(Optional)</string>
    <string name="your_current_shift_label">Your current shift...</string>
    <string name="edit_my_info">Edit Info</string>
    <string name="or_edit_my_info">...or you can</string>
    <string name="name_hint">Name</string>
    <string name="dismiss_btn_on_shift">dismiss</string>
    <string name="title_activity_staff_all_detail">StaffAllDetailActivity</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="delete_account_str">Delete My Account</string>

</resources>
