<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_back">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/search_box_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/hint_white"
            android:text="@string/search_label_hint"/>

        <AutoCompleteTextView
            android:id="@+id/main_search"
            android:layout_width="@dimen/search_box_width"
            android:layout_height="@dimen/search_box_height"
            android:hint="@string/search_hint"
            android:textColorHint="@color/hint_white"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="@dimen/button_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary_500_color"
            android:text="@string/get_colleagues_date"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="@dimen/search_box_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/hint_white"
            android:text="@string/or_add_hint"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/id_add_someone"
            android:layout_width="@dimen/button_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary_500_color"
            android:text="@string/add_colleague"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>


    </LinearLayout>




</RelativeLayout>
