<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_front_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/main_welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/main_welcome_text"
            android:textColor="@color/hint_white" />

        <com.boma.winshift.CircleImageView
            android:id="@+id/front_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:src="@mipmap/bh" />

        <TextView
            android:id="@+id/image_change_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/image_change_hint"
            android:textColor="@color/hint_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/first_name_edit"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/front_main_margin"
                android:hint="@string/name_hint"
                android:textColorHint="@color/hint_white"
                android:textColor="@color/white"
                android:gravity="center"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/dept_edit"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/front_main_margin"
                android:hint="@string/department"
                android:textColorHint="@color/hint_white"
                android:textColor="@color/white"
                android:gravity="center"/>
            <EditText
                android:id="@+id/intercom_number_edit"
                android:maxLines="1"
                android:inputType="phone"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/front_main_margin"
                android:hint="@string/my_intercom_hint"
                android:textColorHint="@color/hint_white"
                android:textColor="@color/white"
                android:gravity="center"
                android:maxLength="4"/>


        </LinearLayout>





        <EditText
            android:id="@+id/phone_number_edit"
            android:maxLines="1"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/my_number_hint"
            android:gravity="center"
            android:textColorHint="@color/hint_white"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/select_shift_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/select_current_shift_hint"
            android:textColor="@color/hint_white" />

        <Spinner
            android:id="@+id/shifts_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_700_color"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/front_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/front_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@color/primary_700_color"
            android:onClick="getAllInputs"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/delete_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete_account_str"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@color/accent_color"
            android:padding="8dp"
            android:onClick="deleteInfo"/>

    </LinearLayout>
    </ScrollView>



</RelativeLayout>
