<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.boma.winshift.SplashActivity">

    <TextView
        android:id="@+id/win_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer_splash"
        android:textColor="@color/hint_white"
        android:textSize="15sp"
        android:layout_below="@+id/win_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0"/>
    <TextView
        android:id="@+id/splash_text2"
        android:layout_below="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer_splash2"
        android:textColor="@color/hint_white"
        android:textSize="15sp"
        android:layout_centerInParent="true"
        android:alpha="0"/>
    <FrameLayout
        android:id="@+id/splash_loading_container"
        android:layout_below="@+id/splash_text2"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_centerInParent="true"
        android:alpha="0"/>




</RelativeLayout>
