<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primary_500_color">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_dialog_title"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:padding="8dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/fullname_to_add"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="@dimen/dialog_font_size"
        android:layout_margin="@dimen/dialog_text_margin" />



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal"
       android:padding="10dp">

       <Button
           android:id="@+id/confirm_cancel"
           android:layout_width="@dimen/button_text_width"
           android:layout_height="wrap_content"
           android:text="@string/cancel_button_text"
           android:gravity="center"
           android:background="@color/primary_700_color"
           android:layout_margin="5dp"
           android:textColor="@color/white"/>
       
       <Button
           android:id="@+id/confirm_save"
           android:layout_width="@dimen/button_text_width"
           android:layout_height="wrap_content"
           android:text="@string/save_button_text"
           android:gravity="center"
           android:background="@color/primary_700_color"
           android:layout_margin="5dp"
           android:textColor="@color/white"/>



   </LinearLayout>




</LinearLayout>